sumo/tests/od2trips/errors/format/vm/vm_false12/errors.od2trips
Error: Not numeric vehicle number in line '0          a'.
Quitting (on error).
